--- a/index.html
+++ b/index.html
@@ -1,10 +1,129 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-    <title>H Singh's Website</title>
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width,initial-scale=1" />
+  <title>Discover India — H Singh's Website</title>
+  <meta name="description" content="Discover India — culture, history, cuisine and travel highlights across this vibrant country." />
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600;700&display=swap" rel="stylesheet">
+  <style>
+    :root{
+      --accent:#FF6F00;
+      --muted:#6b7280;
+      --bg:#fbfbfd;
+      --maxw:1100px;
+    }
+    *{box-sizing:border-box}
+    body{
+      font-family:Inter,system-ui,-apple-system,Segoe UI,Roboto,"Helvetica Neue",Arial;
+      margin:0;background:var(--bg);color:#0f172a;line-height:1.6;
+    }
+    .container{max-width:var(--maxw);margin:0 auto;padding:28px;}
+    header{display:flex;align-items:center;justify-content:space-between;gap:20px;padding:12px 0;}
+    .brand{display:flex;align-items:center;gap:12px}
+    .logo{width:48px;height:48px;border-radius:8px;overflow:hidden;flex:0 0 48px}
+    .logo img{width:100%;height:100%;object-fit:cover;display:block}
+    nav a{margin-left:18px;color:#0f172a;text-decoration:none;font-weight:600}
+    .hero{
+      display:grid;grid-template-columns:1fr;gap:18px;
+      align-items:center;padding:36px;border-radius:14px;
+      background:linear-gradient(180deg,rgba(255,255,255,0.6),rgba(255,255,255,0.8));
+      box-shadow:0 6px 30px rgba(2,6,23,0.06);
+    }
+    .hero-inner{display:flex;flex-direction:column;gap:14px}
+    .eyebrow{color:var(--muted);font-weight:600}
+    h1{margin:0;font-size:clamp(1.6rem,2.4vw,2.6rem)}
+    p.lead{margin:0;color:#374151}
+    .cta{display:inline-block;margin-top:6px;padding:10px 14px;background:var(--accent);color:#fff;border-radius:8px;text-decoration:none;font-weight:700}
+    .grid{display:grid;grid-template-columns:repeat(2,1fr);gap:22px;margin-top:22px}
+    section.card{background:#fff;padding:18px;border-radius:12px;box-shadow:0 4px 18px rgba(2,6,23,0.05)}
+    .card img{width:100%;height:220px;object-fit:cover;border-radius:8px;margin-bottom:12px}
+    h2{margin:0 0 8px 0;font-size:1.1rem}
+    .muted{color:var(--muted);font-size:0.95rem}
+    .gallery{display:grid;grid-template-columns:repeat(3,1fr);gap:8px;margin-top:12px}
+    .gallery img{width:100%;height:120px;object-fit:cover;border-radius:8px}
+    footer{margin-top:28px;padding:24px 0;color:var(--muted);text-align:center;font-size:0.95rem}
+    @media (max-width:900px){
+      .grid{grid-template-columns:1fr}
+      .gallery{grid-template-columns:repeat(2,1fr)}
+      header{flex-direction:column;align-items:flex-start}
+    }
+  </style>
 </head>
 <body>
-    <h1>Welcome to hsingh18.cloud-ip.cc</h1>
-    <p>This site is under construction!</p>
+  <div class="container">
+    <header>
+      <div class="brand">
+        <div class="logo" aria-hidden="true">
+          <img src="https://images.unsplash.com/photo-1526779259212-4b0b8d2dfd8b?q=80&w=800&auto=format&fit=crop&ixlib=rb-4.0.3&s=9f3f3f5bbd4a3d9a9b9b6b4b6c2a1e1f" alt="India logo">
+        </div>
+        <div>
+          <div style="font-weight:700">H Singh</div>
+          <div style="color:var(--muted);font-size:0.9rem">Exploring India</div>
+        </div>
+      </div>
+      <nav aria-label="Main navigation">
+        <a href="#overview">Overview</a>
+        <a href="#culture">Culture</a>
+        <a href="#travel">Travel</a>
+      </nav>
+    </header>
+
+    <main class="hero" role="main" aria-labelledby="hero-title">
+      <div class="hero-inner">
+        <div class="eyebrow">Discover • Experience • Celebrate</div>
+        <h1 id="hero-title">India — A Tapestry of Culture, History & Flavour</h1>
+        <p class="lead">From the snow-capped Himalayas to the tropical south, India is a land of contrasts — ancient traditions, bustling cities and breathtaking landscapes. Explore iconic landmarks, vibrant festivals, and culinary delights.</p>
+        <a class="cta" href="#travel">Start exploring</a>
+      </div>
+      <div>
+        <img src="https://images.unsplash.com/photo-1505765055145-6f3f0b2f1b5c?q=80&w=1400&auto=format&fit=crop&ixlib=rb-4.0.3&s=1c57c7c5a4b4c6b6d0d7e6a8e9f0a123" alt="Taj Mahal at sunrise" style="width:100%;height:260px;object-fit:cover;border-radius:12px">
+      </div>
+    </main>
+
+    <div class="grid">
+      <section id="overview" class="card" aria-labelledby="overview-title">
+        <h2 id="overview-title">Overview</h2>
+        <img src="https://images.unsplash.com/photo-1526779259212-4b0b8d2dfd8b?q=80&w=1400&auto=format&fit=crop&ixlib=rb-4.0.3&s=6974a5f6c8a9f3d1c9e2b4d5a6c8e7b" alt="Indian landscape">
+        <p class="muted">India is the world's largest democracy and one of the fastest-growing major economies. Its history spans millennia, shaped by empires, trade and cultural exchange. The country is home to diverse languages, religions and ecosystems.</p>
+      </section>
+
+      <section id="culture" class="card" aria-labelledby="culture-title">
+        <h2 id="culture-title">Culture & Festivals</h2>
+        <img src="https://images.unsplash.com/photo-1549893077-5e5e3f4f7d3d?q=80&w=1400&auto=format&fit=crop&ixlib=rb-4.0.3&s=0a5b4c6a7d8e9f1b2c3d4e5f6a7b8c9d" alt="Indian festival celebration">
+        <p class="muted">India's cultural fabric includes classical music and dance, literature in many languages, and a calendar full of festivals — Diwali, Holi, Eid, Christmas, Navratri and Pongal among others. Food, clothing and rituals vary widely by region.</p>
+      </section>
+
+      <section class="card" aria-labelledby="history-title">
+        <h2 id="history-title">A Brief History</h2>
+        <img src="https://images.unsplash.com/photo-1541462608148-7b12e20f3c8d?q=80&w=1400&auto=format&fit=crop&ixlib=rb-4.0.3&s=7b3a8f4c6d1b2a9e5f4d6c7b8a9e0f0c" alt="Ancient Indian architecture">
+        <p class="muted">Civilizations such as the Indus Valley flourished here thousands of years ago. Over centuries, empires like the Maurya, Gupta, Mughal and British Raj shaped the subcontinent, leaving a rich architectural and intellectual legacy.</p>
+      </section>
+
+      <section id="cuisine" class="card" aria-labelledby="cuisine-title">
+        <h2 id="cuisine-title">Cuisine</h2>
+        <img src="https://images.unsplash.com/photo-1541542684-8f8aa5d1b0a6?q=80&w=1400&auto=format&fit=crop&ixlib=rb-4.0.3&s=4b2f1a6e5f6d7c9a8b0c1d2e3f4a5b6c" alt="Indian food thali">
+        <p class="muted">Indian cuisine is famously regional — from spicy curries of the south and rich Mughlai dishes of the north to street-food cultures and coastal seafood. Must-try: masala dosa, biryani, butter chicken, chaat and regional sweets.</p>
+      </section>
+    </div>
+
+    <section class="card" aria-labelledby="travel-title" style="margin-top:22px">
+      <h2 id="travel-title">Top Places to Visit</h2>
+      <p class="muted">Highlights include the Taj Mahal (Agra), Jaipur’s palaces, Kerala backwaters, Varanasi’s ghats, Ladakh’s high plains, Goa’s beaches and the Sundarbans mangroves. Each region offers unique landscapes and experiences.</p>
+
+      <div class="gallery" aria-hidden="false" style="margin-top:12px">
+        <img src="https://images.unsplash.com/photo-1505765055145-6f3f0b2f1b5c?q=80&w=800&auto=format&fit=crop&ixlib=rb-4.0.3&s=1c57c7c5a4b4c6b6d0d7e6a8e9f0a123" alt="Taj Mahal">
+        <img src="https://images.unsplash.com/photo-1558980664-10b9d7b2a1c5?q=80&w=800&auto=format&fit=crop&ixlib=rb-4.0.3&s=2d3a4b5c6d7e8f9a0b1c2d3e4f5a6b7c" alt="Jaipur palace">
+        <img src="https://images.unsplash.com/photo-1501785888041-af3ef285b470?q=80&w=800&auto=format&fit=crop&ixlib=rb-4.0.3&s=7a8b9c0d1e2f3a4b5c6d7e8f9a0b1c2d" alt="Kerala backwaters">
+      </div>
+
+      <p class="muted" style="margin-top:12px">Photo credits: Unsplash — images are linked from Unsplash (free to use with attribution). For production, consider hosting optimized images in the repository or a CDN.</p>
+    </section>
+
+    <footer>
+      <div>© <strong>H Singh</strong> — Discover India • Built with care</div>
+      <div style="margin-top:6px"><a href="https://unsplash.com" target="_blank" rel="noopener" style="color:var(--accent);text-decoration:none">Images from Unsplash</a></div>
+    </footer>
+  </div>
 </body>
 </html>
