--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
     <header>
       <div class="brand">
         <div class="logo" aria-hidden="true">
-          <img src="https://images.unsplash.com/photo-1526779259212-4b0b8d2dfd8b?q=80&w=800&auto=format&fit=crop&ixlib=rb-4.0.3&s=9f3f3f5bbd4a3d9a9b9b6b4b6c2a1e1f" alt="India logo">
+          <img src="https://images.unsplash.com/photo-1526779259212-4b0b8d2dfd8b?auto=format&fit=crop&w=800&q=80" alt="India logo">
         </div>
         <div>
           <div style="font-weight:700">H Singh</div>
@@ -77,32 +77,32 @@
         <a class="cta" href="#travel">Start exploring</a>
       </div>
       <div>
-        <img src="https://images.unsplash.com/photo-1505765055145-6f3f0b2f1b5c?q=80&w=1400&auto=format&fit=crop&ixlib=rb-4.0.3&s=1c57c7c5a4b4c6b6d0d7e6a8e9f0a123" alt="Taj Mahal at sunrise" style="width:100%;height:260px;object-fit:cover;border-radius:12px">
+        <img src="https://images.unsplash.com/photo-1505765055145-6f3f0b2f1b5c?auto=format&fit=crop&w=1400&q=80" alt="Taj Mahal at sunrise" style="width:100%;height:260px;object-fit:cover;border-radius:12px">
       </div>
     </main>
 
     <div class="grid">
       <section id="overview" class="card" aria-labelledby="overview-title">
         <h2 id="overview-title">Overview</h2>
-        <img src="https://images.unsplash.com/photo-1526779259212-4b0b8d2dfd8b?q=80&w=1400&auto=format&fit=crop&ixlib=rb-4.0.3&s=6974a5f6c8a9f3d1c9e2b4d5a6c8e7b" alt="Indian landscape">
+        <img src="https://images.unsplash.com/photo-1526779259212-4b0b8d2dfd8b?auto=format&fit=crop&w=1400&q=80" alt="Indian landscape">
         <p class="muted">India is the world's largest democracy and one of the fastest-growing major economies. Its history spans millennia, shaped by empires, trade and cultural exchange. The country is home to diverse languages, religions and ecosystems.</p>
       </section>
 
       <section id="culture" class="card" aria-labelledby="culture-title">
         <h2 id="culture-title">Culture & Festivals</h2>
-        <img src="https://images.unsplash.com/photo-1549893077-5e5e3f4f7d3d?q=80&w=1400&auto=format&fit=crop&ixlib=rb-4.0.3&s=0a5b4c6a7d8e9f1b2c3d4e5f6a7b8c9d" alt="Indian festival celebration">
+        <img src="https://images.unsplash.com/photo-1549893077-5e5e3f4f7d3d?auto=format&fit=crop&w=1400&q=80" alt="Indian festival celebration">
         <p class="muted">India's cultural fabric includes classical music and dance, literature in many languages, and a calendar full of festivals — Diwali, Holi, Eid, Christmas, Navratri and Pongal among others. Food, clothing and rituals vary widely by region.</p>
       </section>
 
       <section class="card" aria-labelledby="history-title">
         <h2 id="history-title">A Brief History</h2>
-        <img src="https://images.unsplash.com/photo-1541462608148-7b12e20f3c8d?q=80&w=1400&auto=format&fit=crop&ixlib=rb-4.0.3&s=7b3a8f4c6d1b2a9e5f4d6c7b8a9e0f0c" alt="Ancient Indian architecture">
+        <img src="https://images.unsplash.com/photo-1541462608148-7b12e20f3c8d?auto=format&fit=crop&w=1400&q=80" alt="Ancient Indian architecture">
         <p class="muted">Civilizations such as the Indus Valley flourished here thousands of years ago. Over centuries, empires like the Maurya, Gupta, Mughal and British Raj shaped the subcontinent, leaving a rich architectural and intellectual legacy.</p>
       </section>
 
       <section id="cuisine" class="card" aria-labelledby="cuisine-title">
         <h2 id="cuisine-title">Cuisine</h2>
-        <img src="https://images.unsplash.com/photo-1541542684-8f8aa5d1b0a6?q=80&w=1400&auto=format&fit=crop&ixlib=rb-4.0.3&s=4b2f1a6e5f6d7c9a8b0c1d2e3f4a5b6c" alt="Indian food thali">
+        <img src="https://images.unsplash.com/photo-1541542684-8f8aa5d1b0a6?auto=format&fit=crop&w=1400&q=80" alt="Indian food thali">
         <p class="muted">Indian cuisine is famously regional — from spicy curries of the south and rich Mughlai dishes of the north to street-food cultures and coastal seafood. Must-try: masala dosa, biryani, butter chicken, chaat and regional sweets.</p>
       </section>
     </div>
@@ -112,9 +112,9 @@
       <p class="muted">Highlights include the Taj Mahal (Agra), Jaipur’s palaces, Kerala backwaters, Varanasi’s ghats, Ladakh’s high plains, Goa’s beaches and the Sundarbans mangroves. Each region offers unique landscapes and experiences.</p>
 
       <div class="gallery" aria-hidden="false" style="margin-top:12px">
-        <img src="https://images.unsplash.com/photo-1505765055145-6f3f0b2f1b5c?q=80&w=800&auto=format&fit=crop&ixlib=rb-4.0.3&s=1c57c7c5a4b4c6b6d0d7e6a8e9f0a123" alt="Taj Mahal">
-        <img src="https://images.unsplash.com/photo-1558980664-10b9d7b2a1c5?q=80&w=800&auto=format&fit=crop&ixlib=rb-4.0.3&s=2d3a4b5c6d7e8f9a0b1c2d3e4f5a6b7c" alt="Jaipur palace">
-        <img src="https://images.unsplash.com/photo-1501785888041-af3ef285b470?q=80&w=800&auto=format&fit=crop&ixlib=rb-4.0.3&s=7a8b9c0d1e2f3a4b5c6d7e8f9a0b1c2d" alt="Kerala backwaters">
+        <img src="https://images.unsplash.com/photo-1505765055145-6f3f0b2f1b5c?auto=format&fit=crop&w=800&q=80" alt="Taj Mahal">
+        <img src="https://images.unsplash.com/photo-1558980664-10b9d7b2a1c5?auto=format&fit=crop&w=800&q=80" alt="Jaipur palace">
+        <img src="https://images.unsplash.com/photo-1501785888041-af3ef285b470?auto=format&fit=crop&w=800&q=80" alt="Kerala backwaters">
       </div>
 
       <p class="muted" style="margin-top:12px">Photo credits: Unsplash — images are linked from Unsplash (free to use with attribution). For production, consider hosting optimized images in the repository or a CDN.</p>
