--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
       <p class="muted">Highlights include the Taj Mahal (Agra), Jaipur’s palaces, Kerala backwaters, Varanasi’s ghats, Ladakh’s high plains, Goa’s beaches and the Sundarbans mangroves. Each region offers unique landscapes and experiences.</p>
 
       <div class="gallery" aria-hidden="false" style="margin-top:12px">
-        <img src="https://images.unsplash.com/photo-1505765055145-6f3f0b2f1b5c?auto=format&fit=crop&w=800&q=80" alt="Taj Mahal">
+        <img src="https://unsplash.com/photos/taj-mahal-india-iWMfiInivp4" alt="Taj Mahal">
         <img src="https://images.unsplash.com/photo-1558980664-10b9d7b2a1c5?auto=format&fit=crop&w=800&q=80" alt="Jaipur palace">
         <img src="https://images.unsplash.com/photo-1501785888041-af3ef285b470?auto=format&fit=crop&w=800&q=80" alt="Kerala backwaters">
       </div>
