--- a/index.html
+++ b/index.html
@@ -77,32 +77,32 @@
         <a class="cta" href="#travel">Start exploring</a>
       </div>
       <div>
-        <img src="https://images.unsplash.com/photo-1505765055145-6f3f0b2f1b5c?auto=format&fit=crop&w=1400&q=80" alt="Taj Mahal at sunrise" style="width:100%;height:260px;object-fit:cover;border-radius:12px">
+        <img src="images/tajjmorning.jpg" alt="Taj Mahal at sunrise" style="width:100%;height:260px;object-fit:cover;border-radius:12px">
       </div>
     </main>
 
     <div class="grid">
       <section id="overview" class="card" aria-labelledby="overview-title">
         <h2 id="overview-title">Overview</h2>
-        <img src="https://images.unsplash.com/photo-1526779259212-4b0b8d2dfd8b?auto=format&fit=crop&w=1400&q=80" alt="Indian landscape">
+        <img src="images/landscape.jpg" alt="Indian landscape">
         <p class="muted">India is the world's largest democracy and one of the fastest-growing major economies. Its history spans millennia, shaped by empires, trade and cultural exchange. The country is home to diverse languages, religions and ecosystems.</p>
       </section>
 
       <section id="culture" class="card" aria-labelledby="culture-title">
         <h2 id="culture-title">Culture & Festivals</h2>
-        <img src="https://images.unsplash.com/photo-1549893077-5e5e3f4f7d3d?auto=format&fit=crop&w=1400&q=80" alt="Indian festival celebration">
+        <img src="images/festive.jpg" alt="Indian festival celebration">
         <p class="muted">India's cultural fabric includes classical music and dance, literature in many languages, and a calendar full of festivals — Diwali, Holi, Eid, Christmas, Navratri and Pongal among others. Food, clothing and rituals vary widely by region.</p>
       </section>
 
       <section class="card" aria-labelledby="history-title">
         <h2 id="history-title">A Brief History</h2>
-        <img src="https://images.unsplash.com/photo-1541462608148-7b12e20f3c8d?auto=format&fit=crop&w=1400&q=80" alt="Ancient Indian architecture">
+        <img src="images/ancestor.jpg" alt="Ancient Indian architecture">
         <p class="muted">Civilizations such as the Indus Valley flourished here thousands of years ago. Over centuries, empires like the Maurya, Gupta, Mughal and British Raj shaped the subcontinent, leaving a rich architectural and intellectual legacy.</p>
       </section>
 
       <section id="cuisine" class="card" aria-labelledby="cuisine-title">
         <h2 id="cuisine-title">Cuisine</h2>
-        <img src="https://images.unsplash.com/photo-1541542684-8f8aa5d1b0a6?auto=format&fit=crop&w=1400&q=80" alt="Indian food thali">
+        <img src="images/thali.jpg" alt="Indian food thali">
         <p class="muted">Indian cuisine is famously regional — from spicy curries of the south and rich Mughlai dishes of the north to street-food cultures and coastal seafood. Must-try: masala dosa, biryani, butter chicken, chaat and regional sweets.</p>
       </section>
     </div>
@@ -112,9 +112,9 @@
       <p class="muted">Highlights include the Taj Mahal (Agra), Jaipur’s palaces, Kerala backwaters, Varanasi’s ghats, Ladakh’s high plains, Goa’s beaches and the Sundarbans mangroves. Each region offers unique landscapes and experiences.</p>
 
       <div class="gallery" aria-hidden="false" style="margin-top:12px">
-        <img src="https://unsplash.com/photos/taj-mahal-india-iWMfiInivp4" alt="Taj Mahal">
-        <img src="https://images.unsplash.com/photo-1558980664-10b9d7b2a1c5?auto=format&fit=crop&w=800&q=80" alt="Jaipur palace">
-        <img src="https://images.unsplash.com/photo-1501785888041-af3ef285b470?auto=format&fit=crop&w=800&q=80" alt="Kerala backwaters">
+        <img src="images/tajj.jpg" alt="Taj Mahal">
+        <img src="images/jaip.jpg" alt="Jaipur palace">
+        <img src="images/lake.jpg" alt="Kerala backwaters">
       </div>
 
       <p class="muted" style="margin-top:12px">Photo credits: Unsplash — images are linked from Unsplash (free to use with attribution). For production, consider hosting optimized images in the repository or a CDN.</p>
