--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width,initial-scale=1" />
   <title>Discover India — H Singh's Website</title>
   <meta name="description" content="Discover India — culture, history, cuisine and travel highlights across this vibrant country." />
-  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600;700&display=swap" rel="stylesheet">
+  <link href="images/flag.jpg" rel="stylesheet">
   <style>
     :root{
       --accent:#FF6F00;
