--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width,initial-scale=1" />
   <title>Discover India — H Singh's Website</title>
   <meta name="description" content="Discover India — culture, history, cuisine and travel highlights across this vibrant country." />
-  <link href="images/flag.jpg" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600;700&display=swap" rel="stylesheet">
   <style>
     :root{
       --accent:#FF6F00;
@@ -55,7 +55,7 @@
     <header>
       <div class="brand">
         <div class="logo" aria-hidden="true">
-          <img src="https://images.unsplash.com/photo-1526779259212-4b0b8d2dfd8b?auto=format&fit=crop&w=800&q=80" alt="India logo">
+          <img src="images/flag.jpg" alt="India logo">
         </div>
         <div>
           <div style="font-weight:700">H Singh</div>
