--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>Discover India — H Singh's Website</title>
+  <title>Discover India</title>
   <meta name="description" content="Discover India — culture, history, cuisine and travel highlights across this vibrant country." />
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600;700&display=swap" rel="stylesheet">
   <style>
@@ -58,7 +58,7 @@
           <img src="images/flag.jpg" alt="India logo">
         </div>
         <div>
-          <div style="font-weight:700">H Singh</div>
+          <div style="font-weight:700">Hritik Singh</div>
           <div style="color:var(--muted);font-size:0.9rem">Exploring India</div>
         </div>
       </div>
