--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
     </section>
 
     <footer>
-      <div>© <strong>H Singh</strong> — Discover India • Built with care</div>
+      <div>© <strong>Hritik Singh</strong> — Discover India • Built with care</div>
       <div style="margin-top:6px"><a href="https://unsplash.com" target="_blank" rel="noopener" style="color:var(--accent);text-decoration:none">Images from Unsplash</a></div>
     </footer>
   </div>
